kubernetes/pgweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: pgweb
  name: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: pgweb
  template:
    metadata:
      labels:
        network: "true"
        service: pgweb
    spec:
      containers:
      - name: eosrate-pgweb
        image: sosedoff/pgweb:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8081
      restartPolicy: Always
