kubernetes/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: postgres
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      labels:
        network: "true"
        service: postgres
    spec:
      containers:
      - image: postgres:10.4
        imagePullPolicy: "Always"
        name: eosrate-postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
          subPath: postgres
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: jungle
        resources:
          requests:
            storage: 100Gi
