kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: ${DOCKER_REGISTRY}/${IMAGE_NAME_WEBAPP}:latest
        imagePullPolicy: "Always"
        name: eosrate-webapp
        ports:
        - containerPort: 80
      restartPolicy: Always
