kubernetes/demux-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demux
  name: demux
spec:
  ports:
  - name: "3030"
    port: 3030
    targetPort: 3030
  selector:
    app: demux
