kubernetes/hapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hapi
  name: hapi
spec:
  ports:
  - name: hapi
    port: 9090
    targetPort: 9090
  selector:
    app: hapi
