kubernetes/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: hasura
  name: hasura
spec:
  ports:
  - name: hasura
    port: 8088
    targetPort: 8088
  selector:
    service: hasura
