kubernetes/pgweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pgweb
  name: pgweb
spec:
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8081
  selector:
    io.kompose.service: pgweb
